@@ -18,6 +18,7 @@
 	<script src="source/Entities/Player.js"></script>
 	<script src="source/Entities/HurtBox.js"></script>
 	<script src="source/Entities/Particle.js"></script>
+	<script src="source/Entities/SpawnBox.js"></script>
 	<script src="source/Game.js"></script>
 	<script src="source/Main.js"></script>
 </head>
