@@ -8,7 +8,7 @@ let initGameCanvas = function () {
 let initPlayer = function () {
 	let pos = {x:50, y:50};
 	let size = {width:25, height:25};
-	let color = `rgb(${Math.floor(Math.random() * 255)},${Math.floor(Math.random() * 255)},${Math.floor(Math.random() * 255)})`;
+	let color = `rgb(${Math.randomInt(0, 255)},${Math.randomInt(0, 255)},${Math.randomInt(0, 255)})`;
 
 	game.spawn( new Player(pos, size, color) );
 }
@@ -25,15 +25,16 @@ let initLevel = function () {
 			let vel = {x: 5, y: 5};
 			let duration = 75*10;
 
-			let randX = Math.floor(Math.random() * 2);
-			let randY = Math.floor(Math.random() * 2);
+			let randX = Math.randomInt(0, 1);
+			let randY = Math.randomInt(0, 1);
 
 			if (randX) vel.x *= -1;
 			if (randY) vel.y *= -1;
 
 			let hurtBox = new HurtBox.DVD(pos, size, color, vel, duration);
-	
-			game.spawn(hurtBox);
+			let spawnBox = new SpawnBox(pos, size, 50, hurtBox);
+
+			game.spawn(spawnBox);
 		}, 250 );
 	}
 }
